Bug 79547 - FILEOPEN: DOCX TOC numbering loses spacing between number and text
Summary: FILEOPEN: DOCX TOC numbering loses spacing between number and text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.2.1.1 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.2.6
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-02 12:10 UTC by Gabor Kelemen (allotropia)
Modified: 2015-02-25 20:25 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
Bugdoc made with Word 2010 (29.05 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-02 12:10 UTC, Gabor Kelemen (allotropia)
Details
Rendering in Word Viewer 11 (73.72 KB, image/png)
2014-06-02 12:11 UTC, Gabor Kelemen (allotropia)
Details
Rendering in Writer 4.2.1 (138.18 KB, image/png)
2014-06-02 12:12 UTC, Gabor Kelemen (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (allotropia) 2014-06-02 12:10:31 UTC
Created attachment 100307 [details]
Bugdoc made with Word 2010

Attached file was made with Word 2010 and there was some spacing between the number and the text of the TOC items, which is lost in Writer 4.2.x.
Comment 1 Gabor Kelemen (allotropia) 2014-06-02 12:11:09 UTC
Created attachment 100308 [details]
Rendering in Word Viewer 11
Comment 2 Gabor Kelemen (allotropia) 2014-06-02 12:12:17 UTC
Created attachment 100309 [details]
Rendering in Writer 4.2.1
Comment 3 Miklos Vajna 2014-06-03 14:39:35 UTC
This works on -4-3 and master, but not on -4-2. git bisect says that this started to work with 9679e9c23216decb5f9f25f85b04cb3f25211111.
Comment 4 Commit Notification 2014-06-03 14:46:35 UTC
Vinaya Mandke committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7bbfdfdac302d766325bd3476f52eb35854d7c38&h=libreoffice-4-2

fdo#79547 fdo#69649 Fix for pre-rendered Table Of Contents


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.