fdo#79547 fdo#69649 Fix for pre-rendered Table Of Contents

Added Import and Export Uts for the same

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/7207

(cherry picked from commit 9679e9c23216decb5f9f25f85b04cb3f25211111)

Conflicts:
	writerfilter/source/dmapper/DomainMapper_Impl.cxx

Change-Id: I966b3d268dd407aa05823e29fe1da4d097091265